Fixed images from being cut off within their container

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,14 @@ p {
     margin-top: 0;
 }
 
+.obj-pos-btm {
+    object-position: bottom;
+}
+
+.obj-pos-left{
+    object-position: left;
+}
+
 /* =================
 TYPOGRAPHY
 ================= */
@@ -171,7 +179,6 @@ IMAGES
 .article-image {
     margin-bottom: 2em;
     object-fit: cover;
-    object-position: bottom;
     width: 100%;
     height: 310px;
 }
@@ -323,7 +330,7 @@ footer p:first-child {
 
 @media (min-width: 700px) {
     .sidebar-widget:first-child {
-    margin-bottom: 2em;
+        margin-bottom: 2em;
     }
 }
 
@@ -332,6 +339,9 @@ footer p:first-child {
     flex-direction: column;
     border-bottom: 1px #707070 solid;
     padding: 1.2em 0;
+}
+ .widget-post-image:nth-child(3) {
+    object-position: top;
 }
 
 .widget-recent-post:last-child {
